Enum to boolean binding

--- a/Ceriyo.Library/Ceriyo.Library.csproj
+++ b/Ceriyo.Library/Ceriyo.Library.csproj
@@ -71,6 +71,7 @@
       <HintPath>..\Ceriyo\Ceriyo\Libraries\Javascript.NET\Noesis.Javascript.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
@@ -86,6 +87,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BindingConverters\EnumToBooleanConverter.cs" />
     <Compile Include="Network\NetworkAgent.cs" />
     <Compile Include="Processing\GameResourceProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,12 +112,12 @@
     <Content Include="Content\Data\LevelChart.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Icons\Unpassable_64x32.png" />
     <Content Include="Content\Tilesets\grassland_tiles.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Content\Icons\" />
     <Folder Include="Content\Settings\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
