--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Enumerations\PVPTypeEnum.cs" />
     <Compile Include="Enumerations\ResourceTypeEnum.cs" />
     <Compile Include="Enumerations\ScriptEventTypeEnum.cs" />
+    <Compile Include="Enumerations\TileEditModeEnum.cs" />
     <Compile Include="EventArguments\GameObjectEventArgs.cs" />
     <Compile Include="EventArguments\ConnectionStatusEventArgs.cs" />
     <Compile Include="EventArguments\GameModuleEventArgs.cs" />
