Beginning passability draw logic

--- a/Ceriyo.Library/Ceriyo.Library.csproj
+++ b/Ceriyo.Library/Ceriyo.Library.csproj
@@ -112,6 +112,7 @@
     <Content Include="Content\Data\LevelChart.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Icons\Passable_64x32.png" />
     <Content Include="Content\Icons\Unpassable_64x32.png" />
     <Content Include="Content\Tilesets\grassland_tiles.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
