--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -94,6 +94,8 @@
     <Compile Include="EventArguments\ConnectionStatusEventArgs.cs" />
     <Compile Include="EventArguments\GameModuleEventArgs.cs" />
     <Compile Include="EventArguments\ScriptEventArgs.cs" />
+    <Compile Include="EventArguments\ObjectPainterEventArgs.cs" />
+    <Compile Include="EventArguments\TilePaintEventArgs.cs" />
     <Compile Include="Extensions\SerializableDictionary.cs" />
     <Compile Include="GameObjects\Area.cs" />
     <Compile Include="GameObjects\CharacterClass.cs" />
