--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -137,6 +137,7 @@
     <Compile Include="ViewModels\NewModuleVM.cs" />
     <Compile Include="ViewModels\ObjectSelectionVM.cs" />
     <Compile Include="ViewModels\PaintObjectsVM.cs" />
+    <Compile Include="ViewModels\PlaceableEditorVM.cs" />
     <Compile Include="ViewModels\ResourceEditorVM.cs" />
     <Compile Include="ViewModels\ScriptSelectionVM.cs" />
     <Compile Include="ViewModels\TilesetEditorVM.cs" />
