--- a/Ceriyo.Library/Ceriyo.Library.csproj
+++ b/Ceriyo.Library/Ceriyo.Library.csproj
@@ -151,12 +151,10 @@
     </Content>
     <Content Include="Content\Icons\Passable_64x32.png" />
     <Content Include="Content\Icons\Unpassable_64x32.png" />
-    <Content Include="Content\Tilesets\grassland_tiles.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Settings\" />
+    <Folder Include="Content\Tilesets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
