--- a/Ceriyo.Library.Tests/Ceriyo.Library.Tests.csproj
+++ b/Ceriyo.Library.Tests/Ceriyo.Library.Tests.csproj
@@ -35,6 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -53,10 +55,16 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Extensions\BindingListExtensionsTests.cs" />
+    <Compile Include="Processing\GameResourceProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptEngine\ScriptMethodTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Ceriyo.Data\Ceriyo.Data.csproj">
+      <Project>{26e4c8b8-a8c4-4b77-bec7-e6149473eefb}</Project>
+      <Name>Ceriyo.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ceriyo.Library\Ceriyo.Library.csproj">
       <Project>{f9ab9dd8-a342-4d58-bbb9-e15184e7f522}</Project>
       <Name>Ceriyo.Library</Name>
