--- a/Ceriyo.Toolset.Tests/Ceriyo.Toolset.Tests.csproj
+++ b/Ceriyo.Toolset.Tests/Ceriyo.Toolset.Tests.csproj
@@ -35,6 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -54,8 +56,18 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationRules\AreaHeightRuleTests.cs" />
+    <Compile Include="ValidationRules\AreaWidthRuleTests.cs" />
+    <Compile Include="ValidationRules\MaxLevelRuleTests.cs" />
+    <Compile Include="ValidationRules\NameLengthRuleTests.cs" />
+    <Compile Include="ValidationRules\ResrefLengthRuleTests.cs" />
+    <Compile Include="ValidationRules\TagLengthRuleTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Ceriyo.Data\Ceriyo.Data.csproj">
+      <Project>{26e4c8b8-a8c4-4b77-bec7-e6149473eefb}</Project>
+      <Name>Ceriyo.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ceriyo.Toolset\Ceriyo.Toolset.csproj">
       <Project>{e5741628-73ff-4007-ada0-d993c2c9126a}</Project>
       <Name>Ceriyo.Toolset</Name>
