--- a/Ceriyo.Data.Tests/Ceriyo.Data.Tests.csproj
+++ b/Ceriyo.Data.Tests/Ceriyo.Data.Tests.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Engine\EngineDataManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
