--- a/Ceriyo.Entities/Ceriyo.Entities.csproj
+++ b/Ceriyo.Entities/Ceriyo.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Entities\GraphicEntity.cs" />
     <Compile Include="Entities\GUI\ButtonEntity.cs" />
     <Compile Include="Entities\GUI\CheckBoxEntity.cs" />
+    <Compile Include="Entities\GUI\WindowEntity.cs" />
     <Compile Include="Entities\PaintTileEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\AreaEditorScreen.cs" />
