--- a/Ceriyo.Entities/Ceriyo.Entities.csproj
+++ b/Ceriyo.Entities/Ceriyo.Entities.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Entities\GUI\CheckBoxEntity.cs" />
     <Compile Include="Entities\GUI\WindowEntity.cs" />
     <Compile Include="Entities\PaintTileEntity.cs" />
+    <Compile Include="Entities\PlayerEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\AreaEditorScreen.cs" />
     <Compile Include="Screens\BaseScreen.cs" />
