--- a/Ceriyo.Entities/Ceriyo.Entities.csproj
+++ b/Ceriyo.Entities/Ceriyo.Entities.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Screens\AreaEditorScreen.cs" />
     <Compile Include="Screens\BaseScreen.cs" />
     <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\MainMenuScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Data\Ceriyo.Data.csproj">
